k8s/applications/argocd/pocket-id/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v1
          ports:
            - containerPort: 1411
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
          readinessProbe:
            exec:
              command: ["/app/pocket-id", "healthcheck"]
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            exec:
              command: ["/app/pocket-id", "healthcheck"]
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: pocket-id
