k8s/applications/argocd/pocket-id/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - protocol: TCP
      port: 1411
      targetPort: 1411
  type: ClusterIP
